# translation-methods-3

./: CMakeLists.txt  README.md  answers-processed  ast.hh  ast_printer.cc  convert_samples.sh  driver.cc  driver.hh  generate_build.sh  main.cc  parser.yy  parser_test.cc  pytoc.cc  scanner.ll  show_sample_ast.sh  visit.hh
cmake/: ahmad1337_deps.cmake
elif-samples/: 01.py  02.py  03.py  04.py
samples/: 03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  13.py  14.py  15.py  16.py  18.py  19.py
while-samples/: 01.py  02.py  03.py
